--- a/gui/templates/activities.html
+++ b/gui/templates/activities.html
@@ -4,7 +4,33 @@
 
 {% block content %}
 <div class="row">
-	<p>hola mundo ocupaciones</p>
+	<div class="col s12 card-panel white">
+		<div class="row">
+			<div class="col s4"><img class='responsive-img' src="{% static 'gui/img/general.png' %}"></div>
+			<div class="col s8"><h4 class='grey-text text-darken-3'>Las ocupaciones más ejercidas</h4></div>
+		</div>
+		<div class="row">
+			<div class="col s12 m12 l6">
+				<div class="collection activities">
+			        <a href="#!" class="collection-item grey-text text-darken-3">Conductores de automóviles, taxis y camionetas <i class="material-icons secondary-content tiny grey-text text-darken-3">send</i></a>
+			        <a href="#!" class="collection-item grey-text text-darken-3">Empleados de control de abastecimientos inventarios<i class="material-icons secondary-content tiny grey-text text-darken-3">send</i></a>
+			        <a href="#!" class="collection-item grey-text text-darken-3">Mecánicos y ajustadores de vehículos de motors <i class="material-icons secondary-content tiny grey-text text-darken-3">send</i></a>
+			        <a href="#!" class="collection-item grey-text text-darken-3">Porteros y guardianes y afines <i class="material-icons secondary-content tiny grey-text text-darken-3">send</i></a>
+			        <a href="#!" class="collection-item grey-text text-darken-3">Soldadores y oxicortadores <i class="material-icons secondary-content tiny grey-text text-darken-3">send</i></a>
+			      </div>
+			</div>
+			<div class="col s12 m12 l6">
+		      <div class="collection activities">
+		        <a href="#!" class="collection-item grey-text text-darken-3">Conductores de camiones pesados <i class="material-icons secondary-content tiny grey-text text-darken-3">send</i></a>
+		        <a href="#!" class="collection-item grey-text text-darken-3">Limpiadores de oficinas, hoteles y otros establecimientos <i class="material-icons secondary-content tiny grey-text text-darken-3">send</i></a>
+		        <a href="#!" class="collection-item grey-text text-darken-3">Personal doméstico<i class="material-icons secondary-content tiny grey-text text-darken-3">send</i></a>
+		        <a href="#!" class="collection-item grey-text text-darken-3">Secretarios<i class="material-icons secondary-content tiny grey-text text-darken-3">send</i></a>
+		        <a href="#!" class="collection-item grey-text text-darken-3">Vendedores y demostradores de tiendas y almacenes <i class="material-icons secondary-content tiny grey-text text-darken-3">send</i></a>
+		      </div>
+			</div>
+		</div>
+	</div>
+	
 </div>
 
 {% endblock content%}
