--- a/gui/templates/about.html
+++ b/gui/templates/about.html
@@ -2,13 +2,19 @@
 {% load static %}
 {% block title %}QUIÉNES SOMOS - Observatorio Aysen{% endblock title%}
 
+{% block head %}
+<script src="{% static 'gui/js/about.js' %}"></script>
+{% endblock head %}
+
 {% block content_home %}
+<br>
 <div class="row">
-	<div class="col s12"><a href="{% url 'gui:home' %}">INICIO /</a><a href="#"> QUIÉNES SOMOS >></a></div>
+	<div class="col s12"><a href="{% url 'gui:home' %}">Inicio /</a><a href="#"> Quiénes Somos >></a></div>
 	<div class="col s3"></div>	
 </div>
+
 <div class="row">
-	<div class="col s12 card-panel white">
+	<div class="col s12 white">
 		<div class="row">
 			<div class="col s12">
 				<img class="responsive-img banner" src="{% static 'gui/img/cropped.jpg' %}">
