--- a/gui/templates/activities.html
+++ b/gui/templates/activities.html
@@ -5,8 +5,9 @@
 {% block head %}<script src="{% static 'gui/js/activities.js' %}"></script>{% endblock head %}
 
 {% block content %}
-<div class="row">
-	<div class="col s12 card-panel white">
+<br>
+<div class="row noselect">
+	<div class="col s12 white">
 		<div class="row">
 			<div class="col s4"><img class='responsive-img' src="{% static 'gui/img/general.png' %}"></div>
 			<div class="col s8"><h4 class='grey-text text-darken-3'>Las ocupaciones más ejercidas</h4></div>
@@ -35,20 +36,74 @@
 </div>
 
 <!-- Modal Structure -->
-  <div id="modal1" class="modal">
+  <div id="modal1" class="modal noselect">
     <div class="modal-content">
       <div class="row">
       	<div class="col s12 m6 l6">
-      		<img class='responsive-img' src="{% static 'gui/img/general.png' %}">
+      		<img class='responsive-img' draggable="false" src="{% static 'gui/img/general.png' %}">
       	</div>
       	<div class="col s12 m6 l6">
       		<h4>Conductores de automóviles, taxis y camionetas</h4>
       	</div>
       </div>
       <div class="row">
-      	<div class="col s2 m1 l2"><img class='responsive-img' src="{% static 'gui/img/salario.png' %}"></div>
-      	<div class="col s7 m9 l8">Salario por hora</div>
+      	<div class="col s2 m1 l1"><img class='responsive-img' src="{% static 'gui/img/salario.png' %}"></div>
+      	<div class="col s7 m9 l9">Salario por hora</div>
       	<div class="col s3 m2 l2"><h5>$2000</h5></div>
+      	<div class="col s2 m1 l1"></div>
+      	<div class="col s10 m11 l11 divider"></div>
+      </div>
+      <div class="row" style="">
+      	
+      </div>
+      <div class="row">
+      	<div class="col s2 m1 l1"><img class='responsive-img' src="{% static 'gui/img/salario.png' %}"></div>
+      	<div class="col s7 m9 l9">Salario promedio</div>
+      	<div class="col s3 m2 l2"><h5>$432000</h5></div>
+      	<div class="col s2 m1 l1"></div>
+      	<div class="col s10 m11 l11 divider"></div>
+      </div>
+      <div class="row">
+      	<div class="col s2 m1 l1"><img class='responsive-img' src="{% static 'gui/img/capacitacion.png' %}"></div>
+      	<div class="col s7 m9 l9">Años de escolaridad</div>
+      	<div class="col s3 m2 l2"><h5>11</h5></div>
+      	<div class="col s2 m1 l1"></div>
+      	<div class="col s10 m11 l11 divider"></div>
+      </div>
+      <div class="row">
+      	<div class="col s2 m1 l1"><img class='responsive-img' src="{% static 'gui/img/mujeres.png' %}"></div>
+      	<div class="col s7 m9 l9">Mujeres</div>
+      	<div class="col s3 m2 l2"><h5>11 %</h5></div>
+      	<div class="col s2 m1 l1"></div>
+      	<div class="col s10 m11 l11 divider"></div>
+      </div>
+      <div class="row">
+      	<div class="col s2 m1 l1"><img class='responsive-img' src="{% static 'gui/img/capacitacion.png' %}"></div>
+      	<div class="col s7 m9 l9">Capacitados</div>
+      	<div class="col s3 m2 l2"><h5>5</h5></div>
+      	<div class="col s2 m1 l1"></div>
+      	<div class="col s10 m11 l11 divider"></div>
+      </div>
+      <div class="row">
+      	<div class="col s2 m1 l1"><img class='responsive-img' src="{% static 'gui/img/jornada-completa.png' %}"></div>
+      	<div class="col s7 m9 l9">Edad promedio</div>
+      	<div class="col s3 m2 l2"><h5>47</h5></div>
+      	<div class="col s2 m1 l1"></div>
+      	<div class="col s10 m11 l11 divider"></div>
+      </div>
+      <div class="row">
+      	<div class="col s2 m1 l1"><img class='responsive-img' src="{% static 'gui/img/jornada-completa.png' %}"></div>
+      	<div class="col s7 m9 l9">Jornada completa</div>
+      	<div class="col s3 m2 l2"><h5>42%</h5></div>
+      	<div class="col s2 m1 l1"></div>
+      	<div class="col s10 m11 l11 divider"></div>
+      </div>
+      <div class="row">
+      	<div class="col s2 m1 l1"><img class='responsive-img' src="{% static 'gui/img/plazo-indefinido.png' %}"></div>
+      	<div class="col s7 m9 l9">Contrato a Plazo Indefinido</div>
+      	<div class="col s3 m2 l2"><h5>75%</h5></div>
+      	<div class="col s2 m1 l1"></div>
+      	<div class="col s10 m11 l11 divider"></div>
       </div>
     </div>
     <div class="modal-footer">
