--- a/gui/templates/advice.html
+++ b/gui/templates/advice.html
@@ -2,13 +2,18 @@
 {% load static %}
 {% block title %}Consejo Asesor - Observatorio Aysen{% endblock title%}
 
+{% block head %}
+<script src="{% static 'gui/js/advice.js' %}"></script>
+{% endblock head %}
+
 {% block content_home %}
+<br>
 <div class="row">
-	<div class="col s12"><a href="{% url 'gui:home' %}">INICIO /</a><a href="#"> CONSEJO ASESOR >></a></div>
+	<div class="col s12"><a href="{% url 'gui:home' %}">Inicio /</a><a href="#"> Consejo Asesor >></a></div>
 	<div class="col s3"></div>	
 </div>
 <div class="row">
-	<div class="col s12 card-panel white">
+	<div class="col s12 white">
 		<div class="row">
 			<div class="col s12">
 				<h4>Consejo Asesor</h4>
