--- a/gui/templates/base_home.html
+++ b/gui/templates/base_home.html
@@ -5,6 +5,7 @@
  <div class="row">
     <div class="col s12 m12 l8">{% block content_home %}{% endblock %}</div>
     <div class="col s12 m12 l4">
+      <div id="auxBreadcrumbs"></div>
       <div class="row">
         <div class="col s12">
           <DIV CLASS='CARD-PANEL TEAL WHITE'>
