--- a/gui/templates/home.html
+++ b/gui/templates/home.html
@@ -2,8 +2,17 @@
 {% extends 'base_home.html' %}
 {% load static %}
 {% block title %}Inicio - Observatorio Aysen{% endblock title%}
+{% block head %}
+<script src="{% static 'gui/js/home.js' %}"></script>
+{% endblock head %}
 
 {% block content_home %}
+<br>
+<div class="row">
+	<div class="col s12"><a href="{% url 'gui:home' %}">Inicio >></a></div>
+	<div class="col s3"></div>	
+</div>
+
 <div class='row'>
 	<div class="col s12">
 		<h4>Bienvenido al Observatorio Laboral de Aysen</h4>
