--- a/gui/templates/base_home.html
+++ b/gui/templates/base_home.html
@@ -1,6 +1,10 @@
 {% extends 'base.html' %}
 {% load static %}
 
+{% block head %}
+<script src="{% static 'gui/js/base_home.js' %}"></script>
+{% endblock head %}
+
 {% block content %}
  <div class="row">
     <div class="col s12 m12 l8">{% block content_home %}{% endblock %}</div>
@@ -16,7 +20,8 @@
       <div class="row">
         <div class="col s12">
           <DIV CLASS='card-panel teal WHITE'>
-            <img class="responsive-img" src="{% static 'gui/img/rda.png' %}" id='imgMap'>
+            <a href="#modal1"><img class="responsive-img" src="{% static 'gui/img/rda.png' %}" id='imgMap' href="#modal1"></a>
+            
           </DIV>
         </div>
       </div>
@@ -32,4 +37,12 @@
       </div>
     </div>
   </div>
+
+  <!-- Modal Structure -->
+  <div id="modal1" class="modal noselect">
+    <div class="modal-content">
+      <img class='responsive-img' src="{% static 'gui/img/rda.png' %}">
+    </div>
+  </div>
+
 {% endblock content %}	
