--- a/gui/templates/base.html
+++ b/gui/templates/base.html
@@ -28,6 +28,11 @@
     <li id='advice'><a class='grey-text text-darken-3' href="{% url 'gui:advice' %}">CONSEJO ASESOR</a></li>
     <li id='team'><a class='grey-text text-darken-3' href="{% url 'gui:team' %}">EQUIPO</a></li>
   </ul>
+  <ul id="dropdown2" class="dropdown-content">
+    <li id='s_about'><a class='grey-text text-darken-3' href="{% url 'gui:about' %}">QUIÉNES SOMOS</a></li>
+    <li id='s_advice'><a class='grey-text text-darken-3' href="{% url 'gui:advice' %}">CONSEJO ASESOR</a></li>
+    <li id='s_team'><a class='grey-text text-darken-3' href="{% url 'gui:team' %}">EQUIPO</a></li>
+  </ul>
   <nav>
     <div class="nav-wrapper">
       <a href="#!" data-activates="mobile-demo" class="button-collapse"><div class='grey-text text-darken-3'>MENU</div></a>
@@ -40,21 +45,8 @@
         <li id="news"><a class='grey-text text-darken-3' href="http://observatorionacional.cl/category/noticias/" target="_blank">NOTICIAS</a></li>
       </ul>
       <ul class="side-nav" id="mobile-demo">
-        <li id='s_home'><a class='grey-text text-darken-3' href="{% url 'gui:home'%}">INICIO</a></li>
-        <li class="no-padding">
-          <ul class="collapsible collapsible-accordion">
-            <li id="s_about">
-              <a class="collapsible-header grey-text text-darken-3">QUIÉNES SOMOS<i class="mdi-navigation-arrow-drop-down"></i></a>
-              <div class="collapsible-body">
-                <ul>
-                  <li id="s_about2"><a class='grey-text text-darken-3' href="{% url 'gui:about' %}">QUIÉNES SOMOS</a></li>
-                  <li id="s_advice"><a class='grey-text text-darken-3' href="{% url 'gui:advice' %}">CONSEJO ASESOR</a></li>
-                  <li id="s_team"><a class='grey-text text-darken-3' href="{% url 'gui:team' %}">EQUIPO</a></li>
-                </ul>
-              </div>
-            </li>
-          </ul>
-        </li>
+        <li id="s_home"><a class='grey-text text-darken-3' href="{% url 'gui:home'%}">INICIO</a></li>
+        <li id="s_about"><a class="dropdown-button grey-text text-darken-3" href="#!" data-activates="dropdown2">QUIÉNES SOMOS<i class="material-icons right">arrow_drop_down</i></a></li>
         <li id="s_panorama"><a class='grey-text text-darken-3' href="{% url 'gui:panorama'%}">PANORAMA REGIONAL</a></li>
         <li id="s_sectors"><a class='grey-text text-darken-3' href="{% url 'gui:sectors'%}">SECTORES</a></li>
         <li id="s_activities"><a class='grey-text text-darken-3' href="{% url 'gui:activities'%}">OCUPACIONES</a></li>
