added carrousel to banner

--- a/gui/templates/base.html
+++ b/gui/templates/base.html
@@ -17,10 +17,25 @@
 </head>
 
 <body >
+  <div class="container">
+
+    <div class="carousel carousel-slider center" data-indicators="true">
+      <div class="carousel-item black white-text" href="#one!">
+        <img class="responsive-img banner" id="thebigimage" src="{% static 'gui/img/Observatorio_Laboral_banner-02.jpg'%}" > 
+        <img src="{% static 'gui/img/logo_sence.png'%}" id='logo_sence' class="responsive-img"> 
+        <img src="{% static 'gui/img/logo_min.png'%}" id='logo_min' class="responsive-img"> 
+      </div>
+      <div class="carousel-item amber white-text" href="#two!">
+      </div>
+      <div class="carousel-item green white-text" href="#three!">
+      </div>
+      <div class="carousel-item blue white-text" href="#four!">
+      </div>
+    </div>
   
- <DIV class="CONTAINER">
-  <img class="responsive-img banner" src="{% static 'gui/img/Observatorio_Laboral_banner-02.jpg'%}" >  
-</DIV>
+  </div>
+  
+ 
 <!-- menu inicial -->
 <div class='container'>
   <ul id="dropdown1" class="dropdown-content">
