--- a/gui/static/gui/css/style.css
+++ b/gui/static/gui/css/style.css
@@ -102,3 +102,31 @@ td img{
 #auxBreadcrumbs{
 	height: 64px;
 }
+
+
+
+
+#logo_sence {
+    height: 120px;
+left: 4px;
+position: relative;
+top: -235px;
+width: 120px;
+}
+#logo_min {
+    height: 120px;
+left: 4px;
+position: relative;
+top: -235px;
+width: 120px;
+}
+
+#thebigimage {
+    /*background-image:url("bread_wine.jpg");
+    height:548px;
+    margin-left:auto;
+    margin-right:auto;*/
+    position:relative; /* and this has to be relative */
+    /*width:731px;*/
+} 
+
