added uach logo

--- a/gui/templates/base.html
+++ b/gui/templates/base.html
@@ -83,7 +83,7 @@
         <div class="col s6 m6 l3"><img class="responsive-img" src="{% static 'gui/img/logos.png' %}" id='bid'></div>
         <div class="col s6 m6 l3"></div>
         <div class="col s6 m6 l3"><img class="responsive-img" src="{% static 'gui/img/otic.png' %}" id='otic'></div>
-        <div class="col s6 m6 l3"><img class="responsive-img" src="{% static 'gui/img/logou.png' %}" id='logou'></div>
+        <div class="col s6 m6 l3"><img class="responsive-img" src="{% static 'gui/img/uach_dos.jpg' %}" id='logou'></div>
       </div>
     </div>
   </footer>
