--- a/gui/templates/activities.html
+++ b/gui/templates/activities.html
@@ -6,6 +6,11 @@
 
 {% block content %}
 <br>
+<div class="row">
+  <div class="col s12"><a href="{% url 'gui:home' %}">Inicio /</a><a href="#"> Ocupaciones >></a></div>
+  <div class="col s3"></div>  
+</div>
+
 <div class="row noselect">
 	<div class="col s12 white">
 		<div class="row">
