--- a/gui/static/gui/css/style.css
+++ b/gui/static/gui/css/style.css
@@ -121,7 +121,17 @@ top: -55%;
 width: 120px;
 }
 
-
+#thebigimage {
+	background-image: url('../img/Observatorio_Laboral_banner-02.jpg');
+	/*
+    background-image:url("{% static 'gui/img/Observatorio_Laboral_banner-02.jpg'%}");
+    
+    height:548px;
+    margin-left:auto;
+    margin-right:auto;*/
+    position:relative; /* and this has to be relative */
+    /*width:731px;*/
+} 
 
 #auxOtic{
 	height: 88px;
