--- a/gui/templates/base.html
+++ b/gui/templates/base.html
@@ -20,10 +20,14 @@
   <!-- carrousel -->
   <div class="container">
     <div class="carousel carousel-slider center" data-indicators="true">
-      <div class="carousel-item black white-text" href="#one!">
-        <img class="responsive-img banner" id="thebigimage" src="{% static 'gui/img/Observatorio_Laboral_banner-02.jpg'%}" > 
-        <img src="{% static 'gui/img/logo_sence.png'%}" id='logo_sence' class="responsive-img"> 
-        <img src="{% static 'gui/img/logo_min.png'%}" id='logo_min' class="responsive-img"> 
+      <div class="carousel-item black white-text" href="#one!" id='thebigimage'>
+        <div class="row">
+          <div class="col s1"></div>
+          <div class="col s4"><img src="{% static 'gui/img/logo_sence.png'%}" id='logo_sence' class="responsive-img"></div>
+          <div class="col s4"><img src="{% static 'gui/img/logo_min.png'%}" id='logo_min' class="responsive-img"></div>
+        </div>
+         
+         
       </div>
       <div class="carousel-item amber white-text" href="#two!">
       </div>
