--- a/gui/templates/base.html
+++ b/gui/templates/base.html
@@ -39,7 +39,7 @@
   </div>
   <!-- end corrousel -->
  
-<!-- menu inicial -->
+<!-- menu -->
 <div class='container'>
   <ul id="dropdown1" class="dropdown-content">
     <li id='about'><a class='grey-text text-darken-3' href="{% url 'gui:about' %}">QUIÉNES SOMOS</a></li>
