detail activities in new page

--- a/gui/templates/activities.html
+++ b/gui/templates/activities.html
@@ -20,100 +20,25 @@
 		<div class="row">
 			<div class="col s12 m12 l6">
 				<div class="collection activities">
-			        <a href="#modal1" class="collection-item grey-text text-darken-3">Conductores de automóviles, taxis y camionetas <i class="material-icons secondary-content tiny grey-text text-darken-3">send</i></a>
-			        <a href="#modal1" class="collection-item grey-text text-darken-3">Empleados de control de abastecimientos inventarios<i class="material-icons secondary-content tiny grey-text text-darken-3">send</i></a>
-			        <a href="#modal1" class="collection-item grey-text text-darken-3">Mecánicos y ajustadores de vehículos de motors <i class="material-icons secondary-content tiny grey-text text-darken-3">send</i></a>
-			        <a href="#modal1" class="collection-item grey-text text-darken-3">Porteros y guardianes y afines <i class="material-icons secondary-content tiny grey-text text-darken-3">send</i></a>
-			        <a href="#!" class="collection-item grey-text text-darken-3">Soldadores y oxicortadores <i class="material-icons secondary-content tiny grey-text text-darken-3">send</i></a>
+			        <a href="{% url 'gui:detailActivitie' %}" class="collection-item grey-text text-darken-3">Conductores de automóviles, taxis y camionetas <i class="material-icons secondary-content tiny grey-text text-darken-3">send</i></a>
+			        <a href="{% url 'gui:detailActivitie' %}" class="collection-item grey-text text-darken-3">Empleados de control de abastecimientos inventarios<i class="material-icons secondary-content tiny grey-text text-darken-3">send</i></a>
+			        <a href="{% url 'gui:detailActivitie' %}" class="collection-item grey-text text-darken-3">Mecánicos y ajustadores de vehículos de motors <i class="material-icons secondary-content tiny grey-text text-darken-3">send</i></a>
+			        <a href="{% url 'gui:detailActivitie' %}" class="collection-item grey-text text-darken-3">Porteros y guardianes y afines <i class="material-icons secondary-content tiny grey-text text-darken-3">send</i></a>
+			        <a href="{% url 'gui:detailActivitie' %}" class="collection-item grey-text text-darken-3">Soldadores y oxicortadores <i class="material-icons secondary-content tiny grey-text text-darken-3">send</i></a>
 			      </div>
 			</div>
 			<div class="col s12 m12 l6">
 		      <div class="collection activities">
-		        <a href="#modal1" class="collection-item grey-text text-darken-3">Conductores de camiones pesados <i class="material-icons secondary-content tiny grey-text text-darken-3">send</i></a>
-		        <a href="#modal1" class="collection-item grey-text text-darken-3">Limpiadores de oficinas, hoteles y otros establecimientos <i class="material-icons secondary-content tiny grey-text text-darken-3">send</i></a>
-		        <a href="#modal1" class="collection-item grey-text text-darken-3">Personal doméstico<i class="material-icons secondary-content tiny grey-text text-darken-3">send</i></a>
-		        <a href="#modal1" class="collection-item grey-text text-darken-3">Secretarios<i class="material-icons secondary-content tiny grey-text text-darken-3">send</i></a>
-		        <a href="#modal1" class="collection-item grey-text text-darken-3">Vendedores y demostradores de tiendas y almacenes <i class="material-icons secondary-content tiny grey-text text-darken-3">send</i></a>
+		        <a href="{% url 'gui:detailActivitie' %}" class="collection-item grey-text text-darken-3">Conductores de camiones pesados <i class="material-icons secondary-content tiny grey-text text-darken-3">send</i></a>
+		        <a href="{% url 'gui:detailActivitie' %}" class="collection-item grey-text text-darken-3">Limpiadores de oficinas, hoteles y otros establecimientos <i class="material-icons secondary-content tiny grey-text text-darken-3">send</i></a>
+		        <a href="{% url 'gui:detailActivitie' %}" class="collection-item grey-text text-darken-3">Personal doméstico<i class="material-icons secondary-content tiny grey-text text-darken-3">send</i></a>
+		        <a href="{% url 'gui:detailActivitie' %}" class="collection-item grey-text text-darken-3">Secretarios<i class="material-icons secondary-content tiny grey-text text-darken-3">send</i></a>
+		        <a href="{% url 'gui:detailActivitie' %}" class="collection-item grey-text text-darken-3">Vendedores y demostradores de tiendas y almacenes <i class="material-icons secondary-content tiny grey-text text-darken-3">send</i></a>
 		      </div>
 			</div>
 		</div>
 	</div>
 </div>
 
-<!-- Modal Structure -->
-  <div id="modal1" class="modal noselect">
-    <div class="modal-content">
-      <div class="row">
-      	<div class="col s12 m6 l6">
-      		<img class='responsive-img' draggable="false" src="{% static 'gui/img/general.png' %}">
-      	</div>
-      	<div class="col s12 m6 l6">
-      		<h4>Conductores de automóviles, taxis y camionetas</h4>
-      	</div>
-      </div>
-      <div class="row">
-      	<div class="col s2 m1 l1"><img class='responsive-img' src="{% static 'gui/img/salario.png' %}"></div>
-      	<div class="col s7 m9 l9">Salario por hora</div>
-      	<div class="col s3 m2 l2"><h5>$2000</h5></div>
-      	<div class="col s2 m1 l1"></div>
-      	<div class="col s10 m11 l11 divider"></div>
-      </div>
-      <div class="row" style="">
-      	
-      </div>
-      <div class="row">
-      	<div class="col s2 m1 l1"><img class='responsive-img' src="{% static 'gui/img/salario.png' %}"></div>
-      	<div class="col s7 m9 l9">Salario promedio</div>
-      	<div class="col s3 m2 l2"><h5>$432000</h5></div>
-      	<div class="col s2 m1 l1"></div>
-      	<div class="col s10 m11 l11 divider"></div>
-      </div>
-      <div class="row">
-      	<div class="col s2 m1 l1"><img class='responsive-img' src="{% static 'gui/img/capacitacion.png' %}"></div>
-      	<div class="col s7 m9 l9">Años de escolaridad</div>
-      	<div class="col s3 m2 l2"><h5>11</h5></div>
-      	<div class="col s2 m1 l1"></div>
-      	<div class="col s10 m11 l11 divider"></div>
-      </div>
-      <div class="row">
-      	<div class="col s2 m1 l1"><img class='responsive-img' src="{% static 'gui/img/mujeres.png' %}"></div>
-      	<div class="col s7 m9 l9">Mujeres</div>
-      	<div class="col s3 m2 l2"><h5>11 %</h5></div>
-      	<div class="col s2 m1 l1"></div>
-      	<div class="col s10 m11 l11 divider"></div>
-      </div>
-      <div class="row">
-      	<div class="col s2 m1 l1"><img class='responsive-img' src="{% static 'gui/img/capacitacion.png' %}"></div>
-      	<div class="col s7 m9 l9">Capacitados</div>
-      	<div class="col s3 m2 l2"><h5>5</h5></div>
-      	<div class="col s2 m1 l1"></div>
-      	<div class="col s10 m11 l11 divider"></div>
-      </div>
-      <div class="row">
-      	<div class="col s2 m1 l1"><img class='responsive-img' src="{% static 'gui/img/jornada-completa.png' %}"></div>
-      	<div class="col s7 m9 l9">Edad promedio</div>
-      	<div class="col s3 m2 l2"><h5>47</h5></div>
-      	<div class="col s2 m1 l1"></div>
-      	<div class="col s10 m11 l11 divider"></div>
-      </div>
-      <div class="row">
-      	<div class="col s2 m1 l1"><img class='responsive-img' src="{% static 'gui/img/jornada-completa.png' %}"></div>
-      	<div class="col s7 m9 l9">Jornada completa</div>
-      	<div class="col s3 m2 l2"><h5>42%</h5></div>
-      	<div class="col s2 m1 l1"></div>
-      	<div class="col s10 m11 l11 divider"></div>
-      </div>
-      <div class="row">
-      	<div class="col s2 m1 l1"><img class='responsive-img' src="{% static 'gui/img/plazo-indefinido.png' %}"></div>
-      	<div class="col s7 m9 l9">Contrato a Plazo Indefinido</div>
-      	<div class="col s3 m2 l2"><h5>75%</h5></div>
-      	<div class="col s2 m1 l1"></div>
-      	<div class="col s10 m11 l11 divider"></div>
-      </div>
-    </div>
-    <div class="modal-footer">
-      <a href="#!" class=" modal-action modal-close waves-effect waves-green btn-flat">Cerrar</a>
-    </div>
-  </div>
 
 {% endblock content%}
