--- a/gui/templates/base_home.html
+++ b/gui/templates/base_home.html
@@ -12,16 +12,11 @@
       <div id="auxBreadcrumbs"></div>
       <div class="row">
         <div class="col s12">
-          <DIV CLASS='CARD-PANEL TEAL WHITE'>
-            <SPAN CLASS='RED-TEXT'>PRINCIPALES SECTORES PRODUCTIVOS POR REGIÓN</SPAN>
-          </DIV>
-        </div>
-      </div>
-      <div class="row">
-        <div class="col s12">
           <DIV CLASS='card-panel teal WHITE'>
+            <SPAN CLASS='RED-TEXT'><center>PRINCIPALES SECTORES PRODUCTIVOS POR REGIÓN</center></SPAN>
+          </DIV>
+          <DIV CLASS='WHITE'>
             <a href="#modal1"><img class="responsive-img" src="{% static 'gui/img/rda.png' %}" id='imgMap' href="#modal1"></a>
-            
           </DIV>
         </div>
       </div>
