--- a/gui/templates/advice.html
+++ b/gui/templates/advice.html
@@ -27,4 +27,31 @@
 		</div>
 	</div>
 </div>
+<div class="row white">
+	<br>
+	<div class="col s6 m3 l3">
+		<img src="{% static 'gui/img/300.png' %}" class='responsive-img circle'>
+		<center>Nombre Apellido</center>
+		<center>Cargo</center>
+		<br>
+	</div>
+	<div class="col s6 m3 l3">
+		<img src="{% static 'gui/img/300.png' %}" class='responsive-img circle'>
+		<center>Nombre Apellido</center>
+		<center>Cargo</center>
+		<br>
+	</div>
+	<div class="col s6 m3 l3">
+		<img src="{% static 'gui/img/300.png' %}" class='responsive-img circle'>
+		<center>Nombre Apellido</center>
+		<center>Cargo</center>
+		<br>
+	</div>
+	<div class="col s6 m3 l3">
+		<img src="{% static 'gui/img/300.png' %}" class='responsive-img circle'>
+		<center>Nombre Apellido</center>
+		<center>Cargo</center>
+		<br>
+	</div>
+</div>
 {% endblock content_home %}
