--- a/gui/templates/detailActivitie.html
+++ b/gui/templates/detailActivitie.html
@@ -15,10 +15,10 @@
 
 <div class="row">
 	<div class="col s12 m6 l6">
-		<img class='responsive-img' draggable="false" src="{% static 'gui/img/general.png' %}">
+		<img class='responsive-img' draggable="false" src="{% static 'gui/img/iconos_agricultura_icono.png' %}">
 	</div>
 	<div class="col s12 m6 l6">
-		<h4>Conductores de automóviles, taxis y camionetas</h4>
+		<h4>Empleados de control de abastecimientos inventarios</h4>
 	</div>
 </div>
 <div class="row">
