--- a/gui/templates/news.html
+++ b/gui/templates/news.html
@@ -11,127 +11,40 @@
 	<div class="col s3"></div>	
 </div>
 <div class="row">
-	<div class="col s12">
+	<div class="col s11">
 		<ul class="pagination center">
 		    <li class="disabled"><a href="#!"><i class="material-icons">chevron_left</i></a></li>
 		    <li class="active"><a href="#!">1</a></li>
 		    <li class="waves-effect"><a href="#!"><i class="material-icons">chevron_right</i></a></li>
 		  </ul>
 	</div>
+	<div class="col s1">
+		{% if user.is_authenticated %}
+		<a class="btn-floating btn-large waves-effect waves-light blue tooltipped" data-tooltip="Agregar Noticia" data-position="top" href="{% url 'gui:newNews' %}"><i class="material-icons">add</i></a>
+		{% endif %}
+	</div>
 </div>
 
 <div class="row">
+	{% if news %}
+	{% for n in news %}
 	<div class="col s12 m6">
 	  <div class="card">
 	    <div class="card-image">
-	      <img src="{% static 'gui/img/sample-1.jpg' %}"> 
+	      <img src="/media/{{n.imagen}}"> 
 	    </div>
 	    <div class="card-content">
-	    	<span class="card-title">Título de la noticia</span>
-	      <p>I am a very simple card. I am good at containing small bits of information. I am convenient because I require little markup to use effectively.</p>
+	    	<span class="card-title">{{n.title}}</span>
+	    	
+	      <p>{{n.resumen}}</p>
+	      <a href="" id='{{n.pk}}'><span class="new badge" data-badge-caption="Editar"></span></a>
+	      <a href="" id='{{n.pk}}'><span class="new badge red" data-badge-caption="Eliminar"></span></a>
+	      
 	    </div>
 	  </div>
 	</div>
-	<div class="col s12 m6">
-	  <div class="card">
-	    <div class="card-image">
-	      <img src="{% static 'gui/img/sample-1.jpg' %}"> 
-	    </div>
-	    <div class="card-content">
-	    	<span class="card-title">Título de la noticia</span>
-	      <p>I am a very simple card. I am good at containing small bits of information. I am convenient because I require little markup to use effectively.</p>
-	    </div>
-	  </div>
-	</div>
-	<div class="col s12 m6">
-	  <div class="card">
-	    <div class="card-image">
-	      <img src="{% static 'gui/img/sample-1.jpg' %}"> 
-	    </div>
-	    <div class="card-content">
-	    	<span class="card-title">Título de la noticia</span>
-	      <p>I am a very simple card. I am good at containing small bits of information. I am convenient because I require little markup to use effectively.</p>
-	    </div>
-	  </div>
-	</div>
-	<div class="col s12 m6">
-	  <div class="card">
-	    <div class="card-image">
-	      <img src="{% static 'gui/img/sample-1.jpg' %}"> 
-	    </div>
-	    <div class="card-content">
-	    	<span class="card-title">Título de la noticia</span>
-	      <p>I am a very simple card. I am good at containing small bits of information. I am convenient because I require little markup to use effectively.</p>
-	    </div>
-	  </div>
-	</div>
-	<div class="col s12 m6">
-	  <div class="card">
-	    <div class="card-image">
-	      <img src="{% static 'gui/img/sample-1.jpg' %}"> 
-	    </div>
-	    <div class="card-content">
-	    	<span class="card-title">Título de la noticia</span>
-	      <p>I am a very simple card. I am good at containing small bits of information. I am convenient because I require little markup to use effectively.</p>
-	    </div>
-	  </div>
-	</div>
-	<div class="col s12 m6">
-	  <div class="card">
-	    <div class="card-image">
-	      <img src="{% static 'gui/img/sample-1.jpg' %}"> 
-	    </div>
-	    <div class="card-content">
-	    	<span class="card-title">Título de la noticia</span>
-	      <p>I am a very simple card. I am good at containing small bits of information. I am convenient because I require little markup to use effectively.</p>
-	    </div>
-	  </div>
-	</div>
-	<div class="col s12 m6">
-	  <div class="card">
-	    <div class="card-image">
-	      <img src="{% static 'gui/img/sample-1.jpg' %}"> 
-	    </div>
-	    <div class="card-content">
-	    	<span class="card-title">Título de la noticia</span>
-	      <p>I am a very simple card. I am good at containing small bits of information. I am convenient because I require little markup to use effectively.</p>
-	    </div>
-	  </div>
-	</div>
-	<div class="col s12 m6">
-	  <div class="card">
-	    <div class="card-image">
-	      <img src="{% static 'gui/img/sample-1.jpg' %}"> 
-	    </div>
-	    <div class="card-content">
-	    	<span class="card-title">Título de la noticia</span>
-	      <p>I am a very simple card. I am good at containing small bits of information. I am convenient because I require little markup to use effectively.</p>
-	    </div>
-	  </div>
-	</div>
-	<div class="col s12 m6">
-	  <div class="card">
-	    <div class="card-image">
-	      <img src="{% static 'gui/img/sample-1.jpg' %}"> 
-	    </div>
-	    <div class="card-content">
-	    	<span class="card-title">Título de la noticia</span>
-	      <p>I am a very simple card. I am good at containing small bits of information. I am convenient because I require little markup to use effectively.</p>
-	    </div>
-	  </div>
-	</div>
-	<div class="col s12 m6">
-	  <div class="card">
-	    <div class="card-image">
-	      <img src="{% static 'gui/img/sample-1.jpg' %}"> 
-	    </div>
-	    <div class="card-content">
-	    	<span class="card-title">Título de la noticia</span>
-	      <p>I am a very simple card. I am good at containing small bits of information. I am convenient because I require little markup to use effectively.</p>
-	    </div>
-	  </div>
-	</div>
-
+	{% endfor %}
+	{% endif %}
 </div>
             
 {% endblock content %}
